--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -1,5 +1,5 @@
 - block
-  - include_tasks: directories.yml
+  - import_tasks: directories.yml
   - include_tasks: autostart.yml
   - include_tasks: theme-config.yml
   - include_tasks: mate_config.yml
