--- a/roles/base/tasks/fonts.yml
+++ b/roles/base/tasks/fonts.yml
@@ -1,3 +1,12 @@
+- name: create font directory
+  tags: font
+  file:
+    path: /home/{{ user }}/.local/share/fonts
+    state: directory
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    mode: 0755
+
 - name: install fonts
   tags: font,fonts
   unarchive:
