edited Debian notepadqq dependencies

--- a/roles/base/tasks/notepadqq_dependencies.yml
+++ b/roles/base/tasks/notepadqq_dependencies.yml
@@ -25,4 +25,5 @@
       - libqt5svg5-dev
       - libuchardet-dev
       - pkg-config
-    when: ansible_distribution == "Debian"
+    state: latest
+  when: ansible_distribution == "Debian"
