--- a/roles/base/tasks/notepadqq_dependencies.yml
+++ b/roles/base/tasks/notepadqq_dependencies.yml
@@ -13,17 +13,17 @@
       - pkgconfig
     when: ansible_distribution == "Fedora"
 
-- name: install notepadqq dependencies - Debian
-  tags: notepadqq,dependencies,debian
-  package:
-    name:
-      - qt5-default
-      - qttools5-dev-tools
-      - qtwebengine5-dev
-      - libqt5websockets5-dev
-      - libqt5svg5
-      - libqt5svg5-dev
-      - libuchardet-dev
-      - pkg-config
-    state: latest
-  when: ansible_distribution == "Debian"
+#- name: install notepadqq dependencies - Debian
+#  tags: notepadqq,dependencies,debian
+#  package:
+#    name:
+#      - qt5-default
+#      - qttools5-dev-tools
+#      - qtwebengine5-dev
+#      - libqt5websockets5-dev
+#      - libqt5svg5
+#      - libqt5svg5-dev
+#      - libuchardet-dev
+#      - pkg-config
+#    state: latest
+#  when: ansible_distribution == "Debian"
