--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,7 +1,7 @@
 - block:
 
   - include_tasks: tasks/packages.yml
-  - include_tasks: tasks/notepadqq_dependencies.yml
+#  - include_tasks: tasks/notepadqq_dependencies.yml
   - include_tasks: tasks/pidgin_dependencies.yml
   - include_tasks: tasks/conky.yml
   - include_tasks: tasks/google_chat.yml
