--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -6,7 +6,7 @@
   - include_tasks: tasks/conky.yml
   - include_tasks: tasks/google_chat.yml
   - include_tasks: tasks/fonts.yml
-  - include_tasks: tasks/notepadqq.yml
+#  - include_tasks: tasks/notepadqq.yml
   - include_tasks: tasks/rainlendar.yml
   - include_tasks: tasks/onedrivegui.yml
   - include_tasks: tasks/tilix_config.yml
