--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -9,6 +9,6 @@
 #  - include_tasks: tasks/notepadqq.yml
   - include_tasks: tasks/rainlendar.yml
 #  - include_tasks: tasks/onedrivegui.yml
-  - include_tasks: tasks/tilix_config.yml
+#  - include_tasks: tasks/tilix_config.yml
   - include_tasks: tasks/sshd.yml
 
