--- a/roles/debian/tasks/virtualbox.yml
+++ b/roles/debian/tasks/virtualbox.yml
@@ -4,7 +4,7 @@
     name:
       - build-essential
       - dkms
-      - linux-headers-$(uname -r)
+      - "linux-headers-$(uname -r)"
 
 - name: install VirtualBox Guest Additions
   tags: virtualbox
