--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -10,5 +10,5 @@
 #  - include_tasks: tasks/rainlendar.yml
 ##  - include_tasks: tasks/onedrivegui.yml
 ##  - include_tasks: tasks/tilix_config.yml
-#  - include_tasks: tasks/sshd.yml
+  - include_tasks: tasks/sshd.yml
 
