edited Debian duf

--- a/roles/debian/tasks/duf.yml
+++ b/roles/debian/tasks/duf.yml
@@ -1,15 +1,22 @@
 - name: download duf
   tags: duf
-  git:
-    repo: https://github.com/muesli/duf.git
-    dest: /home/{{ user }}/duf
-    clone: yes
-    update: yes
+  become_user: {{ user }}
+  apt:
+    deb: https://github.com/muesli/duf/releases/download/v0.8.1/duf_0.8.1_linux_amd64.deb
+    dpkg_options: '-i'
 
-- name: install duf
-  tags: duf
-  shell:
-    cmd: go build
-    chdir: /home/{{ user }}/duf
-  args:
-    executable: /bin/bash
+#- name: download duf
+#  tags: duf
+#  git:
+#    repo: https://github.com/muesli/duf.git
+#    dest: /home/{{ user }}/duf
+#    clone: yes
+#    update: yes
+
+#- name: install duf
+#  tags: duf
+#  shell:
+#    cmd: go build
+#    chdir: /home/{{ user }}/duf
+#  args:
+#    executable: /bin/bash
