edited Debian zsh/aliasrc

--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -1,7 +1,7 @@
 - block:
-  - include_tasks: sudoers.yml
-  - include_tasks: directories.yml
-#  - include_tasks: virtualbox.yml
-  - include_tasks: duf.yml
-  - include_tasks: nala.yml
+#  - include_tasks: sudoers.yml
+#  - include_tasks: directories.yml
+##  - include_tasks: virtualbox.yml
+#  - include_tasks: duf.yml
+#  - include_tasks: nala.yml
   - include_tasks: zsh-alias.yml
