--- a/roles/debian/tasks/zsh-alias.yml
+++ b/roles/debian/tasks/zsh-alias.yml
@@ -16,10 +16,11 @@
 
 - name: source .zshrc and aliasrc files
   tags: alias,zsh
-  shell: bash -c 'source /home/{{ user }}/aliasrc 2> /dev/null' #&& source /home/{{ user }}/.zshrc 2> /dev/null
-#  with_items:
-#    - aliasrc
-#    - .zshrc
+  shell: bash -c 'source /home/{{ user }}/aliasrc 2> /dev/null'
+
+- name: source .zshrc and aliasrc files
+  tags: alias,zsh
+  shell: bash -c 'source /home/{{ user }}/.zshrc 2> /dev/null'
 
 - name: change shell
   tags: zsh,shell
