edited Debian zsh/aliasrc

--- a/roles/debian/tasks/zsh-alias.yml
+++ b/roles/debian/tasks/zsh-alias.yml
@@ -14,13 +14,13 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
+- name: source .zshrc file
+  tags: alias,zsh
+  shell: bash -c 'source /home/{{ user }}/.zshrc 2> /dev/null'
+
 - name: source aliasrc file
   tags: alias,zsh
   shell: bash -c 'source /home/{{ user }}/aliasrc 2> /dev/null'
-
-- name: source .zshrc file
-  tags: alias,zsh
-  shell: bash -c source /home/{{ user }}/.zshrc 2> /dev/null
 
 - name: change shell
   tags: zsh,shell
