edited Debian zsh/aliasrc

--- a/roles/debian/tasks/zsh-alias.yml
+++ b/roles/debian/tasks/zsh-alias.yml
@@ -1,8 +1,24 @@
-- name: zsh config file
+- name: install powerlevel10k
+  tags: zsh
+  unarchive:
+    src: files/powerlevel10k.tar.gz
+    dest: /home/{{ user }}
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
+- name: zsh config file - 1
   tags: zsh
   copy:
     src: files/zshrc
     dest: /home/{{ user }}/.zshrc
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
+- name: zsh config file - 2
+  tags: zsh
+  copy:
+    src: files/p10k.zsh
+    dest: /home/{{ user }}/.p10k.zsh
     owner: "{{ user }}"
     group: "{{ user }}"
 
