--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -1,8 +1,9 @@
 - block:
 #  - include_tasks: sudoers.yml
-  - include_tasks: directories.yml
+#  - include_tasks: directories.yml
 ##  - include_tasks: virtualbox.yml
 #  - include_tasks: duf.yml
 #  - include_tasks: nala.yml
-  - include_tasks: oh-my-posh.yml
-  - include_tasks: zsh-alias.yml
+#  - include_tasks: oh-my-posh.yml
+#  - include_tasks: zsh-alias.yml
+  - include_tasks: btop.yml
