edited Debian notepadqq

--- a/roles/base/tasks/notepadqq_dependencies.yml
+++ b/roles/base/tasks/notepadqq_dependencies.yml
@@ -15,7 +15,7 @@
 
 - name: install notepadqq dependencies - Debian
   tags: notepadqq,dependencies,debian
-  package:
+  apt:
     name:
       - libqt5websockets5
       - libqt5websockets5-dev
