--- a/roles/base/tasks/notepadqq_dependencies.yml
+++ b/roles/base/tasks/notepadqq_dependencies.yml
@@ -1,6 +1,6 @@
 - name: install notepadqq dependencies
   tags: notepadqq,dependencies
-  dnf:
+  package:
     name:
       - qt5-qtbase-devel
       - qt5-qttools-devel
@@ -29,5 +29,5 @@
       - pkg-config
       - qttools5-dev
       - qttools5-dev-tools
-    state: latest
+#    state: latest
 #  when: ansible_distribution == "Debian"
