edited Debian xfconf

--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -6,4 +6,6 @@
 #  - include_tasks: nala.yml
 #  - include_tasks: oh-my-posh.yml
 #  - include_tasks: zsh-alias.yml
-  - include_tasks: btop.yml
+#  - include_tasks: btop.yml
+  - include_tasks: files.yml
+  - include_tasks: xfconf.yml
