--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -23,6 +23,7 @@
     name:
       - plank
       - dconf-editor
+      - python3-psutil
     state: latest
   when: ansible_distribution == "Debian"
 
