edited Debian xfconf

--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -1,7 +1,7 @@
 - name: add hidden files
   tags: xfconf
   xfconf:
-    channel: "thunar"
+    channel: thunar
     property: "/last-show-hidden"
     value_type: "bool"
     value: "true"
