--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -1,5 +1,6 @@
 - name: add hidden files
   tags: xfconf
+  become_user: "{{ user }}"
   xfconf:
     channel: thunar
     property: /last-show-hidden
