--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -1,29 +1,31 @@
-- name: add hidden files
-  tags: xfconf
-  become_user: "{{ user }}"
-  xfconf:
-    channel: thunar
-    property: /last-show-hidden
-    value_type: "bool"
-    value: "true"
-  environment:
-    DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/dbus
+#- name: add hidden files
+#  tags: xfconf
+#  become_user: "{{ user }}"
+#  xfconf:
+#    channel: thunar
+#    property: /last-show-hidden
+#    value_type: "bool"
+#    value: "true"
+#  environment:
+#    DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/dbus
 
-- name: add keyboard shortcut
-  tags: xfconf
-  xfconf:
-    channel: "xfce4-keyboard-shortcuts"
-    property: "/commands/custom/<Super>Return"
-    value_type: "string"
-    value: "/usr/bin/tilix.wrapper"
+#- name: add keyboard shortcut
+#  tags: xfconf
+#  xfconf:
+#    channel: "xfce4-keyboard-shortcuts"
+#    property: "/commands/custom/<Super>Return"
+#    value_type: "string"
+#    value: "/usr/bin/tilix.wrapper"
 
 - name: set background image
   tags: xfconf
   xfconf:
-    channel: "xfce4-panel"
-    property: "/panels/panel-3/background-image"
+    channel: "xfce4-desktop"
+    property: "/backdrop/screen0/monitorVirtual1/workspace0/last-image"
     value_type: "string"
     value: "/home/{{ user }}/Pictures/XFCE_X022_FHD_NoLogo.png"
+  environment:
+    DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/dbus
 
 - name: set number of panels
   tags: xfconf
@@ -32,4 +34,6 @@
     property: "/panels"
     value_type: "array"
     value: ['3']
+  environment:
+    DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/dbus
 
