--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -19,13 +19,15 @@
 
 - name: set background image
   tags: xfconf
+  become: true
+  become_user: "{{ user }}"
   xfconf:
     channel: "xfce4-desktop"
     property: "/backdrop/screen0/monitorVirtual1/workspace0/last-image"
     value_type: "string"
     value: "/home/{{ user }}/Pictures/XFCE_X022_FHD_NoLogo.png"
-    environment:
-      DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/dbus
+  environment:
+    DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/dbus
 
 - name: set number of panels
   tags: xfconf
