--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -25,7 +25,7 @@
     channel: xfce4-desktop
     property: /backdrop/screen0/monitorVirtual1/workspace0/last-image
     value_type: string
-    value: "/home/{{ user }}/Pictures/XFCE_X022_FHD_NoLogo.png"
+    value: /home/{{ user }}/Pictures/XFCE_X022_FHD_NoLogo.png
   environment:
     DBUS_SESSION_BUS_ADDRESS: unix:path=/run/user/1000/dbus
 
