--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -1,4 +1,5 @@
 - name: change background image
+  become_user: "{{ user }}"
   shell: env DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus xfconf-query --channel xfce4-desktop --property /backdrop/screen0/monitorVirtual1/workspace0/last-image -s /home/matth/Pictures/XFCE_X022_FHD_NoLogo.png
   args:
     executable: /bin/bash
