--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -11,6 +11,7 @@
     executable: /bin/bash
 
 - name: set workspace names
+  become: true
   become_user: "{{ user }}"
   xfconf:
     channel: xfwm4
