--- a/roles/debian/tasks/directories.yml
+++ b/roles/debian/tasks/directories.yml
@@ -8,7 +8,7 @@
     group: "{{ user }}"
     mode: 0755
   with_items:
-      - ".local/share/themes"
-      - ".local/share/icons"
+#      - ".local/share/themes"
+#      - ".local/share/icons"
       - "btop"
       - ".poshthemes"
