--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -1,22 +1,27 @@
-- name: change background image
-  become_user: "{{ user }}"
-  shell: env DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus xfconf-query --channel xfce4-desktop --property /backdrop/screen0/monitorVirtual1/workspace0/last-image -s /home/matth/Pictures/XFCE_X022_FHD_NoLogo.png
+#- name: change background image
+#  become_user: "{{ user }}"
+#  shell: env DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus xfconf-query --channel xfce4-desktop --property /backdrop/screen0/monitorVirtual1/workspace0/last-image -s /home/matth/Pictures/XFCE_X022_FHD_NoLogo.png
+#  args:
+#    executable: /bin/bash
+
+#- name: add hidden files
+#  become_user: "{{ user }}"
+#  shell: env DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus xfconf-query --channel thunar --property /last-show-hidden -s true
+#  args:
+#    executable: /bin/bash
+
+#- name: add keyboard shortcut
+#  become_user: "{{ user }}"
+#  shell: env DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus xfconf-query -c xfce4-keyboard-shortcuts -p "/commands/custom/<Super>Return" -n -t string -s /usr/bin/tilix.wrapper
+#  args:
+#    executable: /bin/bash
+
+- name: settings
+  shell:
+    cmd: ./tasks.sh
+    chdir: /home/{{ user }}
   args:
     executable: /bin/bash
-
-- name: add hidden files
-  become_user: "{{ user }}"
-  shell: env DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus xfconf-query --channel thunar --property /last-show-hidden -s true
-  args:
-    executable: /bin/bash
-
-- name: add keyboard shortcut
-  become_user: "{{ user }}"
-  shell: env DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus xfconf-query -c xfce4-keyboard-shortcuts -p "/commands/custom/<Super>Return" -n -t string -s /usr/bin/tilix.wrapper
-  args:
-    executable: /bin/bash
-
-
 
 
 
