edited Debian xfconf

--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -17,8 +17,7 @@
 #    executable: /bin/bash
 
 - name: settings
-  shell:
-    cmd: ./tasks.sh
+  shell: ./tasks.sh
     chdir: /home/{{ user }}
   args:
     executable: /bin/bash
