--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -17,7 +17,8 @@
 #    executable: /bin/bash
 
 - name: settings
-  shell: ./home/{{ user }}/tasks.sh
+  shell:
+    cmd: ./tasks.sh
 #  args:
 #    executable: /bin/bash
 
