edited Debian xfconf

--- a/roles/debian/tasks/xfconf.yml
+++ b/roles/debian/tasks/xfconf.yml
@@ -17,6 +17,7 @@
 #    executable: /bin/bash
 
 - name: settings
+  become_user: "{{ user }}"
   shell:
     cmd: ./tasks.sh
     chdir: /home/{{ user }}
