--- a/roles/debian/tasks/virtualbox.yml
+++ b/roles/debian/tasks/virtualbox.yml
@@ -15,8 +15,9 @@
   tags: virtualbox
   become_user: "{{ user }}"
   become: true
-  shell: bash -c 'sudo sh /media/cdrom0/VBoxLinuxAdditions.run --nox11 > /dev/null'
-#    chdir: /media/cdrom0
-#  args:
-#    executable: /bin/bash
+  shell:
+    cmd:  ./VBoxLinuxAdditions.run --nox11 > /dev/null
+    chdir: /media/cdrom0
+  args:
+    executable: /bin/bash
 
