--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -6,8 +6,9 @@
 #  - include_tasks: oh-my-posh.yml
 #  - include_tasks: zsh-alias.yml
 #  - include_tasks: btop.yml
-  - include_tasks: files.yml
-  - include_tasks: xfconf.yml
-  - include_tasks: tilix_config.yml
+#  - include_tasks: files.yml
+#  - include_tasks: xfconf.yml
+#  - include_tasks: tilix_config.yml
+  - include_tasks: autologin.yml
 #  - include_tasks: cleanup.yml
 #  - include_tasks: virtualbox.yml
