--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -1,14 +1,14 @@
 - block:
-#  - include_tasks: sudoers.yml
-#  - include_tasks: directories.yml
-#  - include_tasks: duf.yml
-#  - include_tasks: nala.yml
-#  - include_tasks: oh-my-posh.yml
-#  - include_tasks: zsh-alias.yml
-#  - include_tasks: btop.yml
-#  - include_tasks: files.yml
-#  - include_tasks: xfconf.yml
-#  - include_tasks: tilix_config.yml
+  - include_tasks: sudoers.yml
+  - include_tasks: directories.yml
+  - include_tasks: duf.yml
+  - include_tasks: nala.yml
+  - include_tasks: oh-my-posh.yml
+  - include_tasks: zsh-alias.yml
+  - include_tasks: btop.yml
+  - include_tasks: files.yml
+  - include_tasks: xfconf.yml
+  - include_tasks: tilix_config.yml
   - include_tasks: autologin.yml
-#  - include_tasks: cleanup.yml
-#  - include_tasks: virtualbox.yml
+  - include_tasks: cleanup.yml
+  - include_tasks: virtualbox.yml
