--- a/roles/debian/tasks/virtualbox.yml
+++ b/roles/debian/tasks/virtualbox.yml
@@ -13,9 +13,8 @@
 
 - name: install VirtualBox Guest Additions
   tags: virtualbox
-  become_user: root
   shell:
-    cmd: sh ./VBoxLinuxAdditions.run --nox11 2> /dev/null
+    cmd: sudo sh ./VBoxLinuxAdditions.run --nox11 2> /dev/null
     chdir: /media/cdrom0
   args:
     executable: /bin/bash
