--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -11,5 +11,5 @@
   # - include_tasks: tilix_config.yml
   # - include_tasks: autologin.yml
   # - include_tasks: cleanup.yml
-  - include_tasks: samba.yml
+  # - include_tasks: samba.yml
   - include_tasks: virtualbox.yml
