--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -10,6 +10,6 @@
   - include_tasks: xfconf.yml
   - include_tasks: tilix_config.yml
   - include_tasks: autologin.yml
-  # - include_tasks: samba.yml
+  - include_tasks: samba.yml
   - include_tasks: virtualbox.yml
   - include_tasks: cleanup.yml
