--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -1,6 +1,7 @@
 # Fedora specific tasks
 - block:
   - include_tasks: directories.yml
+  - include_tasks: vscodium.yml
   - include_tasks: autostart.yml
   - include_tasks: theme-config.yml
   - include_tasks: mate_config.yml
